adding raykel files

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <a href="Diego Garces.html" target="_blank">Diego</a><br>
       <a href="Darwing.html#content1" target="_blank">Darwing</a><br>
       <a href="edwuard.html" target="_blank">Edwuard Castañeda</a><br>
+      <a href="raykel.html" target="_blank">Raykel Quevedo</a><br>
 
 
    </ul>
